<resources>
    <string name="app_name">Songs</string>
    <string name="welcome_em">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="songs">Songs</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="year">Year</string>
    <string name="general">General</string>
    <string name="log_out">Log Out</string>
    <string name="photo">Photo</string>
    <string name="select">Select</string>
    <string name="video">Video</string>
    <string name="release">Release</string>
    <string name="pick_location">Pick location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="note">Note</string>
    <string name="remove">Remove</string>
    <string name="language">Language</string>
    <string name="system">System</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="add_songs">Add song</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="must_be_not_empty">Must be not empty</string>
    <string name="new_songs">New song</string>
    <string name="edit_songs">Edit song</string>
    <string name="details">Details</string>
    <string name="select_photo">Select photo</string>
    <string name="select_video">Select video</string>
    <string name="delete_release">Delete release</string>
    <string name="delete_video">Delete video</string>
    <string name="delete_photo">Delete photo</string>
    <string name="delete_song">Delete song</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="font">Font</string>
    <string name="role">Role</string>
    <string name="admin_role">Admin</string>
    <string name="user_role">User</string>
    <string name="id" translatable="false">ID</string>
    <string name="blocked">Blocked</string>
    <string name="active">Active</string>
    <string name="there_is_no_users">There are not any users</string>
    <string name="msg">Message</string>
    <string name="success">Success</string>
    <string name="blocked_msg">You have been blocked! Ask your admin to unblock!</string>
    <string name="success_change">User\'s params have been sucessfully changed</string>
    <string name="error">Error</string>
    <string name="status">Status</string>
    <string name="admin_panel">Admin panel</string>
    <string name="set_active">Set active</string>
    <string name="set_blocked">Set blocked</string>
    <string name="set_user">Set user</string>
    <string name="set_admin">Set admin</string>
</resources>