<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.settings.SettingsFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/safe_area_x"
            android:paddingTop="@dimen/safe_area_x"
            android:paddingEnd="@dimen/safe_area_x"
            android:paddingBottom="@dimen/safe_area_x">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_settings_textview_role_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textSize="@dimen/header_font_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_settings_textview_role_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textSize="@dimen/text_font_size"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:text="@string/theme"
                    android:textSize="@dimen/header_font_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/element_spacing"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/fragment_settings_button_theme_system"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/system"
                        android:textSize="13.5sp" />

                    <Button
                        android:id="@+id/fragment_settings_button_theme_dark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dark"
                        android:textSize="13.5sp" />

                    <Button
                        android:id="@+id/fragment_settings_button_theme_light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/light"
                        android:textSize="13.5sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/section_spacing"
                    android:text="@string/language"
                    android:textSize="@dimen/header_font_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/element_spacing"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/fragment_settings_button_language_system"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/system"
                        android:textSize="13.5sp" />

                    <Button
                        android:id="@+id/fragment_settings_button_language_english"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/english"
                        android:textSize="13.5sp" />

                    <Button
                        android:id="@+id/fragment_settings_button_language_russian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/russian"
                        android:textSize="13.5sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/section_spacing"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/fragment_settings_textview_set_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_spacing"
                android:text="@string/font"
                android:textSize="@dimen/header_font_size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/fragment_settings_spinner_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/section_spacing"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_spacing"
                android:text="@string/general"
                android:textSize="@dimen/header_font_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fragment_settings_button_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>