<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.songs.form.FormFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/safe_area_x"
            android:paddingTop="@dimen/safe_area_x"
            android:paddingEnd="@dimen/safe_area_x"
            android:paddingBottom="@dimen/safe_area_x">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/section_spacing"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/element_spacing"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fragment_form_photo"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_songs_cell"
                        android:layout_marginEnd="@dimen/element_spacing"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/element_spacing"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_form_photo"
                        app:layout_constraintStart_toStartOf="@+id/fragment_form_photo"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_form_photo" >

                        <Button
                            android:id="@+id/fragment_form_button_select_photo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/select_photo" />

                        <Button
                            android:id="@+id/fragment_form_button_delete_photo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/delete_photo" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/fragment_form_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/fragment_form_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing"
                android:ems="10"
                android:hint="@string/author"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/fragment_form_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/fragment_form_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/element_spacing"
                android:ems="10"
                android:hint="@string/year"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/section_spacing"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/element_spacing"
                    android:orientation="horizontal">

                        <VideoView
                            android:id="@+id/fragment_form_video"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginEnd="@dimen/element_spacing"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_form_video"
                        app:layout_constraintStart_toStartOf="@+id/fragment_form_video"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_form_video" >

                        <Button
                            android:id="@+id/fragment_form_button_select_video"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/select_video" />

                        <Button
                            android:id="@+id/fragment_form_button_delete_video"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/delete_video" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/section_spacing"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fragment_form_tf_release_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/element_spacing"
                    android:ems="10"
                    android:hint="@string/note"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:id="@+id/fragment_form_release_info_stack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/latitude"
                            android:textSize="@dimen/text_font_size" />

                        <TextView
                            android:id="@+id/fragment_form_text_release_latitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="LAT"
                            android:textAlignment="viewEnd"
                            android:textSize="@dimen/text_font_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/element_spacing"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/longitude"
                            android:textSize="@dimen/text_font_size" />

                        <TextView
                            android:id="@+id/fragment_form_text_release_longitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="LONG"
                            android:textAlignment="viewEnd"
                            android:textSize="@dimen/text_font_size" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/element_spacing"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/fragment_form_button_pick_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pick_location" />

                    <Button
                        android:id="@+id/fragment_form_button_delete_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delete_release" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/fragment_form_button_delete_asset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/section_spacing"
                android:text="@string/delete_song" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/fragment_form_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>