<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.admin.users.details.UsersDetailsFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/safe_area_x"
            android:paddingTop="@dimen/safe_area_x"
            android:paddingEnd="@dimen/safe_area_x"
            android:paddingBottom="@dimen/safe_area_x">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_users_details_textview_id_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textSize="@dimen/header_font_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_users_details_textview_id_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textSize="@dimen/text_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/section_spacing"
                android:layout_marginBottom="@dimen/section_spacing"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_users_details_textview_email_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="@dimen/header_font_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_users_details_textview_email_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="@dimen/text_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/section_spacing"
                android:layout_marginBottom="@dimen/section_spacing"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_users_details_textview_status_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="@dimen/header_font_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_users_details_textview_status_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="@dimen/text_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/fragment_users_details_button_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_active" />

                <Button
                    android:id="@+id/fragment_users_details_button_blocked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_blocked" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/section_spacing"
                android:layout_marginBottom="@dimen/section_spacing"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_users_details_textview_role_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textSize="@dimen/header_font_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_users_details_textview_role_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textSize="@dimen/text_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/fragment_users_details_button_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_user" />

                <Button
                    android:id="@+id/fragment_users_details_button_admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_admin" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>